bittext/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bittext-deployment
  labels:
    app: bittext
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bittext
  template:
    metadata:
      labels:
        app: bittext
    spec:
      containers:
        - name: bittext-app
          image: ghcr.io/quickpipes/bittext:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
          resources:
            requests:
              memory: 128M
              cpu: 250m
            limits:
              memory: 128M
              cpu: 250m
          readinessProbe:
            httpGet:
              path: /up
              port: 5000
            initialDelaySeconds: 5
            periodSeconds: 5
