bittext/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bittext-service
spec:
  selector:
    app: bittext
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
